--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,31 +1,31 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Go
+name: Go Web Server
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main]
   pull_request:
-    branches: [ "main" ]
+    branches: [main]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ./server
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.20'
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.20"
 
-    - name: Build
-      run: go build .
+      - name: Build Go application
+        run: go build -o server .
 
-    - name: Test
-      run: go test .
+      - name: Deploy
+        env:
+          GIN_MODE: release
+        run: ./server
+        
