--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,11 +21,11 @@ jobs:
         with:
           go-version: "1.20"
 
-      - name: Build Go application
-        run: go build -o server .
+      # - name: Build Go application
+      #   run: go build -o server .
 
       - name: Deploy
         env:
           GIN_MODE: release
-        run: ./server
+        run: go run main.go
         
